--- a/Assignment2_LLM.ipynb
+++ b/Assignment2_LLM.ipynb
@@ -15,6 +15,7 @@
     },
     "accelerator": "GPU",
     "widgets": {
+      "state": {},
       "application/vnd.jupyter.widget-state+json": {
         "af262569b9344053afe731f7d00a8116": {
           "model_module": "@jupyter-widgets/controls",
